splash page with low quality image

--- a/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".signup">
 
         </activity>
+    <activity android:name=".home">
+
+    </activity>
     </application>
 
 </manifest>
