--- a/AndroidStudioProjects/MyApplication/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidStudioProjects/MyApplication/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Oct 22 16:48:29 EDT 2018
+#Sat Dec 08 18:10:54 EST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
